--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/raphaelmayer/crawl-unsplash-cl.git"
+  },
   "author": "Raphael Mayer",
   "license": "MIT"
 }
